--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,9 @@
 		"/Users/shawnch/UE4Projects/FPSGame/FPSGame.xcworkspace": true,
 		"/Users/shawnch/UE4Projects/FPSGame/Intermediate": true,
 		"/Users/shawnch/UE4Projects/FPSGame/Saved": true
+	},
+	"files.associations": {
+		"__config": "cpp",
+		"__nullptr": "cpp"
 	}
 }
