--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Visual Studio Code user specific files
+.vscode/
+
+# CLion user specific files
+.idea/
+
 # Visual Studio 2015 user specific files
 .vs/
 
